feature:实现模糊模板预览功能
实现模糊模板预览功能
优化预览性能

--- a/frontend/src/A/aboutCodeView.html
+++ b/frontend/src/A/aboutCodeView.html
@@ -71,10 +71,10 @@
             <li>使用Go开发(https://golang.google.cn/)</li>
             <li>桌面程序使用wails构建(https://wails.io/zh-Hans/docs/introduction)</li>
             <li>照片exif信息获取使用exiftool工具(https://exiftool.org/)</li>
-            <li> fork了https://github.com/barasher/go-exiftool并进行了部分修改</li>
+            <li>fork了https://github.com/barasher/go-exiftool并进行了部分修改</li>
+            <li>照片模糊模板使用ImageMagick添加阴影边框效果</li>
             <li>后端接口服务采用gin框架(https://gin-gonic.com/zh-cn/)</li>
             <li>Go exiftool库fork https://github.com/barasher/go-exiftool 并进行了部分修改</li>
-            <li>图片水印生成使用Go库,不需要额外安装扩展</li>
             <li>文字水印使用Alibaba-PuHuiTi-Bold.ttf,Alibaba-PuHuiTi-Light.ttf字体(https://alibabafont.taobao.com/)</li>
             <li>目前MacOS,Win10,Win11</li>
             <li>源码请访问github(https://github.com/yijianlingcheng/WaterMark)</li>
