--- a/frontend/src/F/previewBorder.html
+++ b/frontend/src/F/previewBorder.html
@@ -169,6 +169,26 @@
         #export-save-dir {
             overflow: hidden;
         }
+
+        #blur-show-div {
+            position: fixed;
+            display: inline-block;
+            width: 500px;
+            height: 370px;
+            z-index: -1;
+            overflow: hidden;
+            display: none;
+        }
+
+        #blur-background-img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            filter: blur(10px);
+            transform: scale(1.02);
+        }
     </style>
 </head>
 
@@ -191,6 +211,9 @@
         </div>
         <div class="watermark-tpl-list">
             <div class="div-images-container">
+                <div id="blur-show-div"> <img id="blur-background-img" src="/assets/images/template.jpg">
+
+                </div>
                 <img class="img-container" id="images-container" src="/assets/images/template.jpg">
                 <img class="img-origin" id="images-origin" src="/assets/images/template.jpg">
             </div>
