feature:优化代码结构，新增开发工具
优化代码结构，修复lint工具报错
新增开发工具，方便开发与打包

--- a/frontend/src/A/aboutVersionView.html
+++ b/frontend/src/A/aboutVersionView.html
@@ -67,7 +67,7 @@
     <main>
         <h1>WaterMark</h1>
         <p>一个为照片添加边框与水印功能的程序</p>
-        <p>版本:v0.0.1</p>
+        <p>版本:v1.0.3.Releases</p>
         <ol>
             <li>实现Windows系统下内置exiftool工具</li>
             <li>实现了照片exif信息查看与导出</li>
